--- a/apps/web/src/locales/ko.json
+++ b/apps/web/src/locales/ko.json
@@ -102,12 +102,16 @@
     "installing": "설치 중...",
     "uninstalling": "삭제 중...",
     "installed": "설치됨",
+    "notInstalled": "미설치",
     "confirmInstall": "설치하시겠습니까?",
     "confirmUninstall": "정말로 삭제하시겠습니까? 의존성이 있는 객체에 영향을 줄 수 있습니다.",
+    "confirmUpgrade": "업그레이드하시겠습니까?",
     "installSuccess": "확장 기능이 성공적으로 설치되었습니다.",
     "installFail": "확장 기능 설치 실패: ",
     "uninstallSuccess": "확장 기능이 성공적으로 삭제되었습니다.",
     "uninstallFail": "확장 기능 삭제 실패: ",
+    "upgradeSuccess": "확장 기능이 성공적으로 업그레이드되었습니다.",
+    "upgradeFail": "확장 기능 업그레이드 실패: ",
     "offlineModalTitle": "오프라인 확장 기능 설치",
     "offlineModalTip": "팁:",
     "offlineModalTipText": "확장 기능의 SQL 파일 내용을 여기에 붙여넣으세요. 대상 PostgreSQL 버전과 호환되는지 확인하세요.",
@@ -117,7 +121,29 @@
     "sortBy": "정렬 기준",
     "sortByName": "이름순",
     "sortByPopularity": "인기순",
-    "sortByRecent": "최신/트렌드순"
+    "sortByRecent": "최신/트렌드순",
+    "cancel": "취소",
+    "close": "닫기",
+    "retry": "다시 시도",
+    "totalExtensions": "전체 확장 기능",
+    "installedCount": "설치됨",
+    "availableCount": "설치 가능",
+    "upgradableCount": "업그레이드 가능",
+    "tabAll": "전체",
+    "tabInstalled": "설치됨",
+    "tabAvailable": "설치 가능",
+    "allCategories": "전체 카테고리",
+    "extensionName": "확장 기능명",
+    "category": "카테고리",
+    "version": "버전",
+    "status": "상태",
+    "actions": "작업",
+    "details": "상세",
+    "description": "설명",
+    "noDescription": "설명이 없습니다.",
+    "upgrade": "업그레이드",
+    "updateAvailable": "업데이트 가능",
+    "viewDocumentation": "문서 보기"
   },
   
   "common": {
