--- a/apps/web/src/locales/ko.json
+++ b/apps/web/src/locales/ko.json
@@ -3,6 +3,7 @@
   "dashboard": "대시보드",
   "monitoring": "모니터링",
   "vacuum": "Vacuum 관리",
+  "retention": "보존 주기 관리",
   "query": "쿼리 분석",
   "settings": "설정",
   "systemOnline": "시스템 온라인",
@@ -144,6 +145,26 @@
     "upgrade": "업그레이드",
     "updateAvailable": "업데이트 가능",
     "viewDocumentation": "문서 보기"
+  },
+
+  "retentionPage": {
+    "title": "테이블 보존 주기 관리",
+    "subtitle": "자동화된 데이터 삭제 정책을 관리합니다",
+    "addPolicy": "정책 추가",
+    "selectInstance": "인스턴스 선택",
+    "tableName": "테이블 이름",
+    "selectSchema": "스키마 선택",
+    "selectTable": "테이블 선택",
+    "dateColumn": "날짜 컬럼",
+    "retentionDays": "보존 기간 (일)",
+    "schedule": "일정 (Cron)",
+    "actions": "작업",
+    "creationSuccess": "정책 생성 성공",
+    "deletionSuccess": "정책 삭제 성공",
+    "loading": "로딩 중...",
+    "noPolicies": "설정된 보존 정책이 없습니다.",
+    "createPolicy": "정책 생성",
+    "confirmDelete": "이 정책을 삭제하시겠습니까?"
   },
   
   "common": {
